** New Info engine, to produce `.info' files browseable with Emacs
** New `:info-node' option for `chapter', `section', etc.
** HTML engine: footnotes now yield hyperlinks back to the call site
** HTML engine: footnotes are properly printed for same-file chapters

Previously, footnotes would not get printed in the case of chapters that
are not output in a separate file.

* New in Skribilo 0.9.1

** Improved `configure' diagnostics and build/installation fixes

Thanks to Barrie Stott!

** Various documentation fixes, improvements and additions

Notably, examples no longer use the legacy Skribe API and the ConTeXt
engine is now documented.

** Emacs mode no longer depends on Bigloo UDE
** Guile warnings about duplicate bindings are now hidden

These harmless warnings looked like:

  WARNING: (skribilo ast): imported module (srfi srfi-34) overrides core binding `raise'

** The `slide' package supports additional customs

Namely, `slide-outline-title' and
`slide-outline-{active,inactive}-color'.  See manual for details.

** The `:toc' option of `slide' determines whether to include it in the outline
** New option `:rulecolor' for `table'
** New `--sui-path' command-line option, new `*sui-path*' parameter
** Fix SUI `:ident' references
** Use more SRFI-34/35 exception handling instead of `skribe-error'
** Lesser reliance on recursive make


* New in Skribilo 0.9.0 (user-visible changes compared to Skribe 1.2d)

** New engine: `lout' (see http://lout.sf.net/).

** New packages

  - `eq' for equation formatting.
  - `pie' for pie charts.
  - `diff' for document diff (experimental).
  - `web-book2' for on-line publishing.

** New markups in the `base' package

  `~', `breakable-space', `numref', `!lout', `lout-illustration'.

** Extended markups in the `base' package

   - `footnote' now takes a `:label' option.
   - `document' now takes a `:keywords' option.	
   - `bibliography' now takes a `:labels' option.
