@@ -10,6 +10,10 @@ AM_INIT_AUTOMAKE([gnu no-define check-news readme-alpha])
 
 AC_CONFIG_SRCDIR([src/guile/skribilo/reader.scm])
 
+# Options.
+AC_ARG_ENABLE([guile-vm],
+  [AS_HELP_STRING([--enable-guile-vm],
+    [compile source files for use with Guile-VM (aka. Guile 2.x)])])
 
 # GNU Gettext.
 AM_GNU_GETTEXT([external])
@@ -28,6 +32,11 @@ AC_ARG_WITH([guilemoduledir],
 # Look for Guile.
 GUILE_PROGS
 GUILE_SITE_DIR
+
+# Guile-VM's compiler (aka. Guile 2.0.x).
+AM_CONDITIONAL([ENABLE_GUILE_VM],
+  [test "x$enable_guile_vm" = "xyes" && \
+   $GUILE_TOOLS compile --help 2>&1 >/dev/null])
 
 # Guile-Lint (http://www.geocities.com/user42_kevin/guile-lint/index.html)
 AC_PATH_PROG([GUILE_LINT], [guile-lint])
